--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
-        "symfony/thanks": "^1.0"
+        "symfony/thanks": "^1.0",
+        "zizaco/entrust": "dev-master"
     },
     "autoload": {
         "classmap": [
